# motion

./: .travis.yml  README.md  alg.c  alg_neon_test.c  build-arm.sh  conf.c  config.h.in  event.c  issues.md  logger.c  motion-dist.conf.in  motion.c  motion.h  motion_guide.html  picture.c  stream.c  video_common.c  webhttpd.c
data/: motion-dist.conf.in
scripts/: version.sh
src/: Makefile.am  NEON_2_SSE.h  alg.c  event.c  ffmpeg.c  motion.c  picture.c  util.c  video_common.c  webu.c
